# minitel-native

./: README.md
examples/: README.md
examples/hello_world/: CMakeLists.txt  README.md  display.c  display.h  keyb.c  keyb.h  main.c  ticks.c  ticks.h
examples/image_gallery/: CMakeLists.txt  README.md  main.c
examples/image_gallery/scripts/: generate-image-tiles.py
examples/video_stream/: CMakeLists.txt  README.md  main.c
examples/video_stream/scripts/: send-video-frames.py
lib/: README.md
lib/board/722039m/: CMakeLists.txt  controls.c  keyboard_map.txt  read_keyboard.c
lib/board/722039m/include/board/: controls.h  definitions.h
lib/board/nfz330/: CMakeLists.txt  controls.c  keyboard_map.txt  read_keyboard.c
lib/board/nfz330/include/board/: controls.h  definitions.h
lib/board/nfz400/: CMakeLists.txt  controls.c  keyboard_map.txt  read_keyboard.c
lib/board/nfz400/include/board/: controls.h  definitions.h
lib/cmake/: init.cmake  sdcc-mcs51-toolchain.cmake
lib/keyboard/: CMakeLists.txt  board_key_to_name.c
lib/keyboard/include/keyboard/: keyboard.h
lib/scripts/: generate-keyboard-map.py
lib/timer/: CMakeLists.txt
lib/timer/include/timer/: timer.h
lib/video/: CMakeLists.txt
lib/video/include/video/: commands.h  mcu_interface.h  registers.h
rom-emulation/: .gitignore  README.md
rom-emulation/board_722039m/: ProjectSymbols.kicad_sym  README.md  board_722039m.kicad_pcb  board_722039m.kicad_pro  board_722039m.kicad_sch
rom-emulation/board_722039m/outputs_assembly/: BOM-board_722039m.csv  CPL-board_722039m.csv
rom-emulation/board_722039m/outputs_pcb/: board_722039m-CuBottom.gbr  board_722039m-CuTop.gbr  board_722039m-EdgeCuts.gbr  board_722039m-MaskBottom.gbr  board_722039m-MaskTop.gbr  board_722039m-NPTH.drl  board_722039m-PTH.drl  board_722039m-SilkBottom.gbr  board_722039m-SilkTop.gbr
rom-emulation/board_generic_diy/: README.md
rom-emulation/board_nfz330_nfz400/: ProjectSymbols.kicad_sym  README.md  board_nfz330_nfz400.kicad_pcb  board_nfz330_nfz400.kicad_pro  board_nfz330_nfz400.kicad_sch  fp-lib-table
rom-emulation/board_nfz330_nfz400/ProjectFootprints.pretty/: NFZ330_ROM_Port.kicad_mod  NFZ400_ROM_Port.kicad_mod  RaspberryPi_Pico_Common_THT.kicad_mod
rom-emulation/board_nfz330_nfz400/outputs_assembly/: BOM-board_nfz330_nfz400.csv  CPL-board_nfz330_nfz400.csv
rom-emulation/board_nfz330_nfz400/outputs_pcb/: board_nfz330_nfz400-CuBottom.gbr  board_nfz330_nfz400-CuTop.gbr  board_nfz330_nfz400-EdgeCuts.gbr  board_nfz330_nfz400-MaskBottom.gbr  board_nfz330_nfz400-MaskTop.gbr  board_nfz330_nfz400-NPTH.drl  board_nfz330_nfz400-PTH.drl  board_nfz330_nfz400-SilkBottom.gbr  board_nfz330_nfz400-SilkTop.gbr
rom-emulation/firmware/: CMakeLists.txt  README.md
rom-emulation/firmware/common/: magic-io-definitions.h
rom-emulation/firmware/menu/: CMakeLists.txt  magic-io.c  magic-io.h  main.c
rom-emulation/firmware/scripts/: generate-data-partition.py  generate-full-install.py  generate-linker-script.py  generate-pin-map.py  generate-rom-array.py  rom-emulator-cli.py
rom-emulation/firmware/src/: CMakeLists.txt  cli-protocol.cpp  cli-protocol.h  led.cpp  led.h  lwipopts.h  magic-io.cpp  magic-io.h  main.cpp  mememu-common.pio  mememu-with-ram.pio  mememu-without-ram.pio  mememu.cpp  mememu.h  mememu.pio  partition.cpp  partition.h  romemu.cpp  romemu.h  romemu.pio  trace.cpp  trace.h  trace.pio
